[gd_scene load_steps=5 format=3 uid="uid://di83w3rx3pmo7"]

[ext_resource type="Script" path="res://scripts/item.gd" id="1_b7cj0"]
[ext_resource type="Texture2D" uid="uid://cfrexvcrwn7sr" path="res://src/sprites/spritesheet_48x48.png" id="2_elydg"]
[ext_resource type="AudioStream" uid="uid://nbjbk6xcyl57" path="res://src/audio/MI_SFX 30.mp3" id="3_rnvl1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lbsad"]
radius = 24.0

[node name="item" type="RigidBody2D"]
script = ExtResource("1_b7cj0")

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lbsad")

[node name="sprite" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("2_elydg")
hframes = 16
vframes = 22

[node name="highlight" type="ColorRect" parent="sprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="but" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rnvl1")
max_polyphony = 2

[connection signal="button_down" from="but" to="." method="_on_but_button_down"]
[connection signal="focus_entered" from="but" to="." method="_on_but_focus_entered"]
[connection signal="focus_exited" from="but" to="." method="_on_but_focus_exited"]
[connection signal="mouse_entered" from="but" to="." method="_on_but_mouse_entered"]
[connection signal="mouse_exited" from="but" to="." method="_on_but_mouse_exited"]
